--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 composer.phar
-/vendor/
+!/vendor
+/vendor/*
+!/vendor/zcblog
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
+
+###> PHP-CS-FIXER ###
+.php_cs.cache
+###< PHP-CS-FIXER ###
+
+###> PHPmd ###
+phpmd.html
+###< PHPmd ###
